tests/specs/node/error_stack_internal_frames/console_log.out
Error: ENOENT: no such file or directory, open '/non/existent/file'
    at readFileSync (ext:deno_node/_fs/_fs_readFile.ts:[WILDCARD])
    at [WILDCARD]console_log.ts:6:5
    at processTicksAndRejections (ext:core/01_core.js:[WILDCARD]) {
  errno: [WILDCARD],
  syscall: "open",
  code: "ENOENT",
  path: "/non/existent/file"
}
